perf(library): page home media requests (#154)
