# backend/mediaserver/mediaserver.go
@@ -143,14 +143,6 @@ func GetLibrarySectionDetails(ctx context.Context, library *models.LibrarySectio
 	return msClient.GetLibrarySectionDetails(ctx, library)
 }
 
-func GetLibrarySectionItems(ctx context.Context, section models.LibrarySection, sectionStartIndex string, limit string) ([]models.MediaItem, int, logging.LogErrorInfo) {
-	msClient, Err := NewMediaServerClient(&config.Current.MediaServer)
-	if Err.Message != "" {
-		return nil, 0, Err
-	}
-	return msClient.GetLibrarySectionItems(ctx, section, sectionStartIndex, limit)
-}
-
 func GetMovieCollections(ctx context.Context, section models.LibrarySection) (collections []models.CollectionItem, Err logging.LogErrorInfo) {
 	msClient, Err := NewMediaServerClient(&config.Current.MediaServer)
 	if Err.Message != "" {
